--- a/shop.html
+++ b/shop.html
@@ -108,6 +108,28 @@
 				</ul>
 			</div>
 		</main>
+		<footer class="page-footer">
+			<div class="layout-positioner">
+				<div class="contact-info">
+					<p>
+						Барбершоп "Бородинский"<br>
+						Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+						<a href="#">Как нас найти?</a><br>
+						Телефон: +7 (495) 666-02-66
+					</p>
+				</div>
+				<div class="social-networks">
+					<span>Давайте дружить!</span>
+					<a href="#" class="social-btn social-vk">Vkontakte</a>
+					<a href="#" class="social-btn social-fb">Facebook</a>
+					<a href="#" class="social-btn social-instagram">Instagram</a>
+				</div>
+				<div class="copyright">
+					<span>Разработано:</span>
+					<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+				</div>
+			</div>
+		</footer>
 		<script>
 			window.onload = function() {
 				document.getElementById("showResultsBtn").addEventListener("click", function(event) {
