Wrapped product names into p tag

--- a/shop.html
+++ b/shop.html
@@ -53,7 +53,9 @@
 				<section class="products-list">
 					<article class="product">
 						<a href="#"><img src="img/product1.jpeg" alt='Набор для путешествий "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
-						<a href="#" class="product-name">Набор для путешествий<br>"BAXTER OF CALIFORNIA"</a>
+						<a href="#" class="product-name">
+							<p>Набор для путешествий<br>"BAXTER OF CALIFORNIA"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">2900 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
@@ -61,7 +63,9 @@
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product2.jpeg" alt='Увлажняющий кондиционер "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
-						<a href="#" class="product-name">Увлажняющий кондиционер<br>"BAXTER OF CALIFORNIA"</a>
+						<a href="#" class="product-name">
+							<p>Увлажняющий кондиционер<br>"BAXTER OF CALIFORNIA"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">750 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
@@ -69,7 +73,9 @@
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product3.jpeg" alt='Гель для волос "SUAVECITO"' width="150" height="150"></a>
-						<a href="#" class="product-name">Гель для волос<br>"SUAVECITO"</a>
+						<a href="#" class="product-name">
+							<p>Гель для волос<br>"SUAVECITO"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">290 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
@@ -77,7 +83,9 @@
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product4.jpeg" alt='Глина для укладки волос "AMERICAN CREW"' width="150" height="150"></a>
-						<a href="#" class="product-name">Глина для укладки волос<br>"AMERICAN CREW"</a>
+						<a href="#" class="product-name">
+							<p>Глина для укладки волос<br>"AMERICAN CREW"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">500 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
@@ -85,7 +93,9 @@
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product5.jpeg" alt='Гель для волос "AMERICAN CREW"' width="150" height="150"></a>
-						<a href="#" class="product-name">Гель для волос<br>"AMERICAN CREW"</a>
+						<a href="#" class="product-name">
+							<p>Гель для волос<br>"AMERICAN CREW"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">300 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
@@ -93,7 +103,9 @@
 					</article>
 					<article>
 						<a href="#"><img src="img/product6.jpeg" alt='Набор для бритья "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
-						<a href="#" class="product-name">Набор для бритья<br>"BAXTER OF CALIFORNIA"</a>
+						<a href="#" class="product-name">
+							<p>Набор для бритья<br>"BAXTER OF CALIFORNIA"</p>
+						</a>
 						<div class="block-buy">
 							<span class="price">3900 РУБ.</span>
 							<button type="button" onclick="addToCart()">Купить</button>
