--- a/item.html
+++ b/item.html
@@ -34,13 +34,13 @@
 					<li><a class="current" href="#">Набор для путешествий "BAXTER OF CALIFORNIA"</a></li>
 				</ul>
 			</div>
-			<section class="gallery">
+			<section class="item-gallery">
 				<img class="image-large" src="img/item1-photo1.jpeg" alt="Фото товара 1" width="450" height="300">
 				<img class="image-small" src="img/item1-photo2.jpeg" alt="Фото товара 2" width="150" height="200">
 				<img class="image-small" src="img/item1-photo3.jpeg" alt="Фото товара 3" width="150" height="200">
 				<img class="image-small" src="img/item1-photo4.jpeg" alt="Фото товара 4" width="150" height="200">
 			</section>
-			<section class="info">
+			<section class="item-info">
 				<span class="status">Есть в наличии</span>
 				<span class="item-code">Артикул: DEXTER-AE</span>
 				<p class="description">
@@ -62,7 +62,26 @@
 				</section>
 			</section>
 		</div>
-
+		<footer class="page-footer">
+			<div class="contacts-info">
+				<p>
+					Барбершоп "Бородинский"<br>
+					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+					<a href="#">Как нас найти?</a><br>
+					Телефон: +7 (495) 666-02-66
+				</p>
+			</div>
+			<div class="social-networks">
+				<span>Давайте дружить!</span>
+				<a href="#" class="social-btn social-vk">Vkontakte</a>
+				<a href="#" class="social-btn social-fb">Facebook</a>
+				<a href="#" class="social-btn social-instagram">Instagram</a>
+			</div>
+			<div class="copyright">
+				<span>Разработано:</span>
+				<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+			</div>
+		</footer>
 		<script>
 			function addToCart() {}
 		</script>
