Several fixes according to comments

--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,9 @@
 	<body>
 		<header class="page-header">
 			<div class="layout-positioner">
-				<div class="header-logo"><a href="#">LOGO</a></div>
+				<a class="header-logo" href="#">
+					<img src="img/logo.jpeg" alt="LOGO" width="80" height="40">
+				</a>
 				<nav class="header-menu">
 					<ul>
 						<li><a href="#">Информация</a></li>
@@ -20,7 +22,7 @@
 				</nav>
 				<div class="header-login">
 					<!-- Если включен js, то обработать событие и отменить переход по ссылке, если выключен, перейти по ссылке -->
-					<a href="#" onclick="loginClicked(event)">Вход</a>
+					<a class="js-login-btn" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
@@ -34,82 +36,82 @@
 				</ul>
 
 				<section class="filters">
-					<form action="#" method="POST">
+					<form action="/results.html" method="POST">
 						<h2>Производители:</h2>
-						<label><input type="checkbox" name="baxter-of-california" checked>BAXTER OF CALIFORNIA</label><br>
-						<label><input type="checkbox" name="mr-natty">MR NATTY</label><br>
-						<label><input type="checkbox" name="suavecito" checked>SUAVECITO</label><br>
-						<label><input type="checkbox" name="malin-goetz">MALIN+GOETZ</label><br>
-						<label><input type="checkbox" name="murrays">MURRAY'S</label><br>
-						<label><input type="checkbox" name="american-crew" checked>AMERICAN CREW</label>
+						<input type="checkbox" name="baxter-of-california" id="Baxter" checked><label for="Baxter">BAXTER OF CALIFORNIA</label>
+						<input type="checkbox" name="mr-natty" id="Mrnatty"><label for="Mrnatty">MR NATTY</label>
+						<input type="checkbox" name="suavecito" id="Suavecito" checked><label for="Suavecito">SUAVECITO</label>
+						<input type="checkbox" name="malin-goetz" id="MalinGoetz"><label for="MalinGoetz">MALIN+GOETZ</label>
+						<input type="checkbox" name="murrays" id="Murrays"><label for="Murrays">MURRAY'S</label>
+						<input type="checkbox" name="american-crew" id="AmericanCrew" checked><label for="AmericanCrew">AMERICAN CREW</label>
 
 						<h2>Группы товаров:</h2>
 						<label><input type="radio" name="products-type" value="shavingAccessories">Бритвенные принадлежности</label><br>
 						<label><input type="radio" name="products-type" value="care" checked>Средства для ухода</label><br>
 						<label><input type="radio" name="products-type" value="accessories">Аксессуары</label><br>
 
-						<a class="show-results-btn" onclick="showResultsClicked(event)" href="/results.html" id="showResultsBtn">Показать</a>
+						<button type="submit" class="show-results-btn">Показать</button>
 					</form>
 				</section>
 				<section class="products-list">
 					<article class="product">
 						<a href="#"><img src="img/product1.jpeg" alt='Набор для путешествий "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Набор для путешествий<br>"BAXTER OF CALIFORNIA"</p>
+							Набор для путешествий<br>"BAXTER OF CALIFORNIA"
 						</a>
-						<div class="block-buy">
-							<span class="price">2900 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">2900 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product2.jpeg" alt='Увлажняющий кондиционер "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Увлажняющий кондиционер<br>"BAXTER OF CALIFORNIA"</p>
+							Увлажняющий кондиционер<br>"BAXTER OF CALIFORNIA"
 						</a>
-						<div class="block-buy">
-							<span class="price">750 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">750 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product3.jpeg" alt='Гель для волос "SUAVECITO"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Гель для волос<br>"SUAVECITO"</p>
+							Гель для волос<br>"SUAVECITO"
 						</a>
-						<div class="block-buy">
-							<span class="price">290 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">290 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product4.jpeg" alt='Глина для укладки волос "AMERICAN CREW"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Глина для укладки волос<br>"AMERICAN CREW"</p>
+							Глина для укладки волос<br>"AMERICAN CREW"
 						</a>
-						<div class="block-buy">
-							<span class="price">500 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">500 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
 					<article class="product">
 						<a href="#"><img src="img/product5.jpeg" alt='Гель для волос "AMERICAN CREW"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Гель для волос<br>"AMERICAN CREW"</p>
+							Гель для волос<br>"AMERICAN CREW"
 						</a>
-						<div class="block-buy">
-							<span class="price">300 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">300 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
-					<article>
+					<article class="product">
 						<a href="#"><img src="img/product6.jpeg" alt='Набор для бритья "BAXTER OF CALIFORNIA"' width="150" height="150"></a>
 						<a href="#" class="product-name">
-							<p>Набор для бритья<br>"BAXTER OF CALIFORNIA"</p>
+							Набор для бритья<br>"BAXTER OF CALIFORNIA"
 						</a>
-						<div class="block-buy">
-							<span class="price">3900 РУБ.</span>
-							<button type="button" onclick="addToCart()">Купить</button>
+						<div class="product-buy">
+							<span class="product-buy-price">3900 РУБ.</span>
+							<button class="js-product-buy-btn" type="button">Купить</button>
 						</div>
 					</article>
 				</section>
@@ -143,18 +145,5 @@
 				</div>
 			</div>
 		</footer>
-		<script>
-			function loginClicked(event) {
-				event.preventDefault();
-				// do something else
-			}
-
-			function showResultsClicked(event) {
-				event.preventDefault();
-				// do something else
-			}
-
-			function addToCart() {}
-		</script>
 	</body>
 </html>
