--- a/item.html
+++ b/item.html
@@ -8,7 +8,7 @@
 <body>
 	<header class="page-header">
 		<div class="layout-positioner">
-			<div class="header-logo"><a href="#">LOGO</a></div>
+			<a class="header-logo" href="#"><img src="img/logo.jpeg" alt="LOGO" width="80" height="40"></a>
 			<nav class="header-menu">
 				<ul>
 					<li><a href="#">Информация</a></li>
@@ -19,8 +19,7 @@
 				</ul>
 			</nav>
 			<div class="header-login">
-				<!-- Если включен js, то обработать событие и отменить переход по ссылке, если выключен, перейти по ссылке -->
-				<a href="#" onclick="loginClicked(event)">Вход</a>
+				<a class="js-login-btn" href="#">Вход</a>
 			</div>
 		</div>
 	</header>
@@ -64,23 +63,25 @@
 			</section>
 		</div>
 		<footer class="page-footer">
-			<div class="contacts-info">
-				<p>
-					Барбершоп "Бородинский"<br>
-					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-					<a href="#">Как нас найти?</a><br>
-					Телефон: +7 (495) 666-02-66
-				</p>
-			</div>
-			<div class="social-networks">
-				<span>Давайте дружить!</span>
-				<a href="#" class="social-btn social-vk">Vkontakte</a>
-				<a href="#" class="social-btn social-fb">Facebook</a>
-				<a href="#" class="social-btn social-instagram">Instagram</a>
-			</div>
-			<div class="copyright">
-				<span>Разработано:</span>
-				<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+			<div class="layout-positioner">
+				<div class="contacts-info">
+					<p>
+						Барбершоп "Бородинский"<br>
+						Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+						<a href="#">Как нас найти?</a><br>
+						Телефон: +7 (495) 666-02-66
+					</p>
+				</div>
+				<div class="social-networks">
+					<span>Давайте дружить!</span>
+					<a href="#" class="social-btn social-vk">Vkontakte</a>
+					<a href="#" class="social-btn social-fb">Facebook</a>
+					<a href="#" class="social-btn social-instagram">Instagram</a>
+				</div>
+				<div class="copyright">
+					<span>Разработано:</span>
+					<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+				</div>
 			</div>
 		</footer>
 		<script>
