Replaced <button> with <a> in buy-btn

--- a/shop.html
+++ b/shop.html
@@ -61,7 +61,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">2900 РУБ.</span>
-							<button type="button" class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -71,7 +71,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">750 РУБ.</span>
-							<button type="button" class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -81,7 +81,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">290 РУБ.</span>
-							<button type="button" class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -91,7 +91,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">500 РУБ.</span>
-							<button type="button" class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -101,7 +101,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">300 РУБ.</span>
-							<button type="button" class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -111,7 +111,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">3900 РУБ.</span>
-							<button type="button"  class="js-buy-btn">Купить</button>
+							<a class="js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 				</section>
