--- a/item.html
+++ b/item.html
@@ -50,7 +50,7 @@
 				</p>
 				<div class="product-buy">
 					<span class="product-buy-price">2900 РУБ.</span>
-					<button type="button" class="js-buy-btn">КУПИТЬ</button>
+					<a class="js-buy-btn" href="#">КУПИТЬ</a>
 				</div>
 				<section class="product-details-contents">
 					<h2>В набор входят:</h2>
