Added basic class to all black buttons/links

--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
 				</ul>
 			</nav>
 			<div class="header-login">
-				<a class="js-login-btn" href="#">Вход</a>
+				<a class="btn js-login-btn" href="#">Вход</a>
 			</div>
 		</div>
 	</header>
@@ -50,7 +50,7 @@
 				</p>
 				<div class="product-buy">
 					<span class="product-buy-price">2900 РУБ.</span>
-					<a class="js-buy-btn" href="#">КУПИТЬ</a>
+					<a class="btn js-buy-btn" href="#">КУПИТЬ</a>
 				</div>
 				<section class="product-details-contents">
 					<h2>В набор входят:</h2>
@@ -83,7 +83,7 @@
 			</div>
 			<div class="copyright">
 				<span>Разработано:</span>
-				<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+				<a href="#" class="btn footer-logo">HTMLACADEMY.RU</a>
 			</div>
 		</div>
 	</footer>
