--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
 				</nav>
 				<div class="header-login">
 					<!-- Если включен js, то обработать событие и отменить переход по ссылке, если выключен, перейти по ссылке -->
-					<a class="js-login-btn" href="#">Вход</a>
+					<a class="btn js-login-btn" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
@@ -50,7 +50,7 @@
 						<label><input type="radio" name="products-type" value="care" checked>Средства для ухода</label><br>
 						<label><input type="radio" name="products-type" value="accessories">Аксессуары</label><br>
 
-						<button type="submit" class="show-results-btn">Показать</button>
+						<button type="submit" class="btn btn-show-results">Показать</button>
 					</form>
 				</section>
 				<section class="products-list">
@@ -61,7 +61,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">2900 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -71,7 +71,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">750 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -81,7 +81,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">290 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -91,7 +91,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">500 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -101,7 +101,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">300 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -111,7 +111,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">3900 РУБ.</span>
-							<a class="js-buy-btn" href="#">Купить</a>
+							<a class="btn js-buy-btn" href="#">Купить</a>
 						</div>
 					</article>
 				</section>
@@ -141,7 +141,7 @@
 				</div>
 				<div class="copyright">
 					<span>Разработано:</span>
-					<a href="#" class="footer-logo">HTMLACADEMY.RU</a>
+					<a href="#" class="btn footer-logo">HTMLACADEMY.RU</a>
 				</div>
 			</div>
 		</footer>
