--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
 				</ul>
 			</nav>
 			<div class="header-login">
-				<a class="btn js-login-btn" href="#">Вход</a>
+				<a class="btn btn-login js-btn-login" href="#">Вход</a>
 			</div>
 		</div>
 	</header>
@@ -50,7 +50,7 @@
 				</p>
 				<div class="product-buy">
 					<span class="product-buy-price">2900 РУБ.</span>
-					<a class="btn js-buy-btn" href="#">КУПИТЬ</a>
+					<a class="btn btn-standard js-btn-buy" href="#">КУПИТЬ</a>
 				</div>
 				<section class="product-details-contents">
 					<h2>В набор входят:</h2>
@@ -77,13 +77,13 @@
 			</div>
 			<div class="social-networks">
 				<span>Давайте дружить!</span>
-				<a href="#" class="social-btn social-vk">Vkontakte</a>
-				<a href="#" class="social-btn social-fb">Facebook</a>
-				<a href="#" class="social-btn social-instagram">Instagram</a>
+				<a href="#" class="btn btn-social social-vk">Vkontakte</a>
+				<a href="#" class="btn btn-social social-fb">Facebook</a>
+				<a href="#" class="btn btn-social social-instagram">Instagram</a>
 			</div>
 			<div class="copyright">
 				<span>Разработано:</span>
-				<a href="#" class="btn footer-logo">HTMLACADEMY.RU</a>
+				<a href="#" class="btn btn-footer-logo">HTMLACADEMY.RU</a>
 			</div>
 		</div>
 	</footer>
