--- a/shop.html
+++ b/shop.html
@@ -21,8 +21,7 @@
 					</ul>
 				</nav>
 				<div class="header-login">
-					<!-- Если включен js, то обработать событие и отменить переход по ссылке, если выключен, перейти по ссылке -->
-					<a class="btn js-login-btn" href="#">Вход</a>
+					<a class="btn btn-login js-btn-login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
@@ -61,7 +60,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">2900 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -71,7 +70,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">750 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -81,7 +80,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">290 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -91,7 +90,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">500 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -101,7 +100,7 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">300 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 					<article class="product">
@@ -111,15 +110,15 @@
 						</a>
 						<div class="product-buy">
 							<span class="product-buy-price">3900 РУБ.</span>
-							<a class="btn js-buy-btn" href="#">Купить</a>
+							<a class="btn btn-standard js-btn-buy" href="#">Купить</a>
 						</div>
 					</article>
 				</section>
 				<ul class="pagination">
-					<li><a href="#">1</a></li>
-					<li><a class="current">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
+					<li><a class="btn btn-standard" href="#">1</a></li>
+					<li><a class="btn btn-standard current">2</a></li>
+					<li><a class="btn btn-standard" href="#">3</a></li>
+					<li><a class="btn btn-standard" href="#">4</a></li>
 				</ul>
 			</div>
 		</main>
@@ -135,13 +134,13 @@
 				</div>
 				<div class="social-networks">
 					<span>Давайте дружить!</span>
-					<a href="#" class="social-btn social-vk">Vkontakte</a>
-					<a href="#" class="social-btn social-fb">Facebook</a>
-					<a href="#" class="social-btn social-instagram">Instagram</a>
+					<a href="#" class="btn btn-social social-vk">Vkontakte</a>
+					<a href="#" class="btn btn-social social-fb">Facebook</a>
+					<a href="#" class="btn btn-social social-instagram">Instagram</a>
 				</div>
 				<div class="copyright">
 					<span>Разработано:</span>
-					<a href="#" class="btn footer-logo">HTMLACADEMY.RU</a>
+					<a href="#" class="btn btn-footer-logo">HTMLACADEMY.RU</a>
 				</div>
 			</div>
 		</footer>
