Prepared pictures and font styles

--- a/item.html
+++ b/item.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Barbershop - item page</title>
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 <body>
 	<header class="page-header">
 		<div class="layout-positioner">
 			<a class="header-logo" href="#">
-				<img src="img/logo.jpeg" alt="LOGO" width="80" height="40">
+				<img src="img/logo.png" alt="LOGO" width="111" height="24">
 			</a>
 			<nav class="header-menu">
 				<ul>
@@ -27,7 +27,7 @@
 	</header>
 	<main class="product-details">
 		<div class="layout-positioner">
-			<h1>Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
+			<h1 class="page-heading-1">Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
 			<div class="breadcrumbs">
 				<ul>
 					<li><a href="#">Главная</a></li>
@@ -37,10 +37,10 @@
 				</ul>
 			</div>
 			<section class="product-details-gallery">
-				<img class="gallery-image-large" src="img/item1-photo1.jpeg" alt="Фото товара 1" width="450" height="300">
-				<img class="gallery-image-small" src="img/item1-photo2.jpeg" alt="Фото товара 2" width="150" height="200">
-				<img class="gallery-image-small" src="img/item1-photo3.jpeg" alt="Фото товара 3" width="150" height="200">
-				<img class="gallery-image-small" src="img/item1-photo4.jpeg" alt="Фото товара 4" width="150" height="200">
+				<img class="gallery-image-large" src="img/item1-photo1.jpg" alt="Фото товара 1" width="460" height="499">
+				<img class="gallery-image-small" src="img/item1-photo2.jpg" alt="Фото товара 2" width="140" height="149">
+				<img class="gallery-image-small" src="img/item1-photo3.jpg" alt="Фото товара 3" width="140" height="149">
+				<img class="gallery-image-small" src="img/item1-photo4.jpg" alt="Фото товара 4" width="140" height="149">
 			</section>
 			<section class="product-details-info">
 				<span class="product-details-status">Есть в наличии</span>
@@ -53,7 +53,7 @@
 					<a class="btn btn-standard js-btn-buy" href="#">КУПИТЬ</a>
 				</div>
 				<section class="product-details-contents">
-					<h2>В набор входят:</h2>
+					<h2 class="page-heading-2">В набор входят:</h2>
 					<ul>
 						<li>Средство для умывания (50 мл)</li>
 						<li>Увлажняющий крем (50 мл)</li>
