Added bg- and img- prefixed to pics, removed unnecessary pics

--- a/item.html
+++ b/item.html
@@ -9,7 +9,7 @@
 	<header class="page-header">
 		<div class="layout-positioner">
 			<a class="header-logo" href="#">
-				<img src="img/logo.png" alt="LOGO" width="111" height="24">
+				<img src="img/img-logo.png" alt="LOGO" width="111" height="24">
 			</a>
 			<nav class="header-menu">
 				<ul>
@@ -37,10 +37,10 @@
 				</ul>
 			</div>
 			<section class="product-details-gallery">
-				<img class="gallery-image-large" src="img/item1-photo1.jpg" alt="Фото товара 1" width="460" height="499">
-				<img class="gallery-image-small" src="img/item1-photo2.jpg" alt="Фото товара 2" width="140" height="149">
-				<img class="gallery-image-small" src="img/item1-photo3.jpg" alt="Фото товара 3" width="140" height="149">
-				<img class="gallery-image-small" src="img/item1-photo4.jpg" alt="Фото товара 4" width="140" height="149">
+				<img class="gallery-image-large" src="img/img-item1-photo1.jpg" alt="Фото товара 1" width="460" height="499">
+				<img class="gallery-image-small" src="img/img-item1-photo2.jpg" alt="Фото товара 2" width="140" height="149">
+				<img class="gallery-image-small" src="img/img-item1-photo3.jpg" alt="Фото товара 3" width="140" height="149">
+				<img class="gallery-image-small" src="img/img-item1-photo4.jpg" alt="Фото товара 4" width="140" height="149">
 			</section>
 			<section class="product-details-info">
 				<span class="product-details-status">Есть в наличии</span>
