--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 		<header class="page-header">
 			<div class="layout-positioner">
 				<a class="header-logo" href="#">
-					<img src="img/logo.png" alt="LOGO" width="111" height="24">
+					<img src="img/img-logo.png" alt="LOGO" width="111" height="24">
 				</a>
 				<nav class="header-menu">
 					<ul>
@@ -54,7 +54,7 @@
 				</section>
 				<section class="products-list">
 					<article class="product">
-						<a href="#"><img src="img/product1.jpg" alt='Набор для путешествий "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product1.jpg" alt='Набор для путешествий "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Набор для путешествий<br>"BAXTER OF CALIFORNIA"
 						</a>
@@ -64,7 +64,7 @@
 						</div>
 					</article>
 					<article class="product">
-						<a href="#"><img src="img/product2.jpg" alt='Увлажняющий кондиционер "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product2.jpg" alt='Увлажняющий кондиционер "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Увлажняющий кондиционер<br>"BAXTER OF CALIFORNIA"
 						</a>
@@ -74,7 +74,7 @@
 						</div>
 					</article>
 					<article class="product">
-						<a href="#"><img src="img/product3.jpg" alt='Гель для волос "SUAVECITO"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product3.jpg" alt='Гель для волос "SUAVECITO"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Гель для волос<br>"SUAVECITO"
 						</a>
@@ -84,7 +84,7 @@
 						</div>
 					</article>
 					<article class="product">
-						<a href="#"><img src="img/product4.jpg" alt='Глина для укладки волос "AMERICAN CREW"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product4.jpg" alt='Глина для укладки волос "AMERICAN CREW"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Глина для укладки волос<br>"AMERICAN CREW"
 						</a>
@@ -94,7 +94,7 @@
 						</div>
 					</article>
 					<article class="product">
-						<a href="#"><img src="img/product5.jpg" alt='Гель для волос "AMERICAN CREW"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product5.jpg" alt='Гель для волос "AMERICAN CREW"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Гель для волос<br>"AMERICAN CREW"
 						</a>
@@ -104,7 +104,7 @@
 						</div>
 					</article>
 					<article class="product">
-						<a href="#"><img src="img/product6.jpg" alt='Набор для бритья "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
+						<a href="#"><img src="img/img-product6.jpg" alt='Набор для бритья "BAXTER OF CALIFORNIA"' width="220" height="165"></a>
 						<a href="#" class="product-name">
 							Набор для бритья<br>"BAXTER OF CALIFORNIA"
 						</a>
