Removed unnecessary classes from login link

--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
 				</ul>
 			</nav>
 			<div class="header-login">
-				<a class="btn btn-login js-btn-login" href="#">Вход</a>
+				<a class="js-btn-login" href="#">Вход</a>
 			</div>
 		</div>
 	</header>
