Added layout of item.html, added clearfix class to containers

--- a/shop.html
+++ b/shop.html
@@ -126,7 +126,7 @@
     <div class="layout-positioner clearfix">
       <div class="contact-info">
         <p>
-          Барбершоп "Бородинский"<br>
+          Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
