--- a/item.html
+++ b/item.html
@@ -7,11 +7,11 @@
 	</head>
 <body>
 	<header class="page-header">
-		<div class="layout-positioner">
-			<a class="header-logo" href="#">
+		<div class="layout-positioner clearfix">
+			<a class="page-header-logo" href="#">
 				<img src="img/img-logo.png" alt="LOGO" width="111" height="24">
 			</a>
-			<nav class="header-menu">
+			<nav class="page-header-menu">
 				<ul>
 					<li><a href="#">Информация</a></li>
 					<li><a href="#">Новости</a></li>
@@ -20,22 +20,20 @@
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
-			<div class="header-login">
+			<div class="page-header-login">
 				<a class="js-btn-login" href="#">Вход</a>
 			</div>
 		</div>
 	</header>
 	<main class="product-details">
-		<div class="layout-positioner">
-			<h1 class="page-heading-1">Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
-			<div class="breadcrumbs">
-				<ul>
+		<div class="layout-positioner clearfix">
+			<h1 class="page-heading-1">Набор для путешествий «BAXTER OF CALIFORNIA»</h1>
+				<ul class="breadcrumbs item-page-breadcrumbs">
 					<li><a href="#">Главная</a></li>
 					<li><a href="#">Магазин</a></li>
 					<li><a href="#">Средства для ухода</a></li>
-					<li><a class="current">Набор для путешествий "BAXTER OF CALIFORNIA"</a></li>
+					<li><a class="current">Набор для путешествий «BAXTER OF CALIFORNIA»</a></li>
 				</ul>
-			</div>
 			<section class="product-details-gallery">
 				<img class="gallery-image-large" src="img/img-item1-photo1.jpg" alt="Фото товара 1" width="460" height="499">
 				<img class="gallery-image-small" src="img/img-item1-photo2.jpg" alt="Фото товара 2" width="140" height="149">
@@ -66,10 +64,10 @@
 		</div>
 	</main>
 	<footer class="page-footer">
-		<div class="layout-positioner">
-			<div class="contacts-info">
+		<div class="layout-positioner clearfix">
+			<div class="contact-info">
 				<p>
-					Барбершоп "Бородинский"<br>
+					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
 					Телефон: +7 (495) 666-02-66
@@ -77,9 +75,11 @@
 			</div>
 			<div class="social-networks">
 				<span>Давайте дружить!</span>
-				<a href="#" class="btn btn-social social-vk">Vkontakte</a>
-				<a href="#" class="btn btn-social social-fb">Facebook</a>
-				<a href="#" class="btn btn-social social-instagram">Instagram</a>
+        <ul>
+  				<li><a href="#" class="btn btn-social social-vk">Vkontakte</a></li>
+				  <li><a href="#" class="btn btn-social social-fb">Facebook</a></li>
+				  <li><a href="#" class="btn btn-social social-instagram">Instagram</a></li>
+        </ul>
 			</div>
 			<div class="copyright">
 				<span>Разработано:</span>
